@@ -58,7 +58,7 @@ The twos are equivalent, it is only a matter of preference. However, do not mix 
         <td>No, defaults to type</td></tr>
     <tr><td>conf</td><td>comma separated list of public configurations in which this artifact is published.
     	'*' wildcard can be used to designate all public configurations of this module</td>
-        <td>No, defaults to '*' if neither conf attribute nor conf children element is given</td></tr>
+        <td>No, defaults to defaultconf attribute value on parent publications element.</td></tr>
     <tr><td>url</td><td>a url at which this artifact can be found if it isn't located at the standard location in the repository <span class="since">since 1.4</span></td>
         <td>No, defaults to no url</td></tr>
 </tbody>
