@@ -1229,6 +1229,11 @@ specifier|private
 name|String
 name|descriptorVersion
 decl_stmt|;
+specifier|private
+name|String
+index|[]
+name|publicationsDefaultConf
+decl_stmt|;
 specifier|public
 name|Parser
 parameter_list|(
@@ -1932,16 +1937,10 @@ name|qName
 argument_list|)
 condition|)
 block|{
-name|state
-operator|=
-name|PUB
-expr_stmt|;
-name|artifactsDeclared
-operator|=
-literal|true
-expr_stmt|;
-name|checkConfigurations
-argument_list|()
+name|publicationsStarted
+argument_list|(
+name|attributes
+argument_list|)
 expr_stmt|;
 block|}
 if|else if
@@ -2312,6 +2311,80 @@ throw|throw
 name|sax
 throw|;
 block|}
+block|}
+specifier|private
+name|void
+name|publicationsStarted
+parameter_list|(
+name|Attributes
+name|attributes
+parameter_list|)
+block|{
+name|state
+operator|=
+name|PUB
+expr_stmt|;
+name|artifactsDeclared
+operator|=
+literal|true
+expr_stmt|;
+name|checkConfigurations
+argument_list|()
+expr_stmt|;
+name|String
+name|defaultConf
+init|=
+name|ivy
+operator|.
+name|substitute
+argument_list|(
+name|attributes
+operator|.
+name|getValue
+argument_list|(
+literal|"defaultconf"
+argument_list|)
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|defaultConf
+operator|!=
+literal|null
+condition|)
+block|{
+name|setPublicationsDefaultConf
+argument_list|(
+name|defaultConf
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|private
+name|void
+name|setPublicationsDefaultConf
+parameter_list|(
+name|String
+name|defaultConf
+parameter_list|)
+block|{
+name|this
+operator|.
+name|publicationsDefaultConf
+operator|=
+name|defaultConf
+operator|==
+literal|null
+condition|?
+literal|null
+else|:
+name|defaultConf
+operator|.
+name|split
+argument_list|(
+literal|","
+argument_list|)
+expr_stmt|;
 block|}
 specifier|private
 name|boolean
@@ -5586,11 +5659,17 @@ name|String
 index|[]
 name|confs
 init|=
+name|publicationsDefaultConf
+operator|==
+literal|null
+condition|?
 name|getMd
 argument_list|()
 operator|.
 name|getConfigurationsNames
 argument_list|()
+else|:
+name|publicationsDefaultConf
 decl_stmt|;
 for|for
 control|(
@@ -5617,6 +5696,9 @@ name|confs
 index|[
 name|i
 index|]
+operator|.
+name|trim
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|getMd
@@ -5628,6 +5710,9 @@ name|confs
 index|[
 name|i
 index|]
+operator|.
+name|trim
+argument_list|()
 argument_list|,
 name|artifact
 argument_list|)
