@@ -5749,6 +5749,113 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testPublicationDefaultConf
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ModuleDescriptor
+name|md
+init|=
+name|XmlModuleDescriptorParser
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|parseDescriptor
+argument_list|(
+name|settings
+argument_list|,
+name|getClass
+argument_list|()
+operator|.
+name|getResource
+argument_list|(
+literal|"test-publication-defaultconf.xml"
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|md
+argument_list|)
+expr_stmt|;
+name|Artifact
+index|[]
+name|artifacts
+init|=
+name|md
+operator|.
+name|getArtifacts
+argument_list|(
+literal|"default"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|artifacts
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|3
+argument_list|,
+name|artifacts
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|artifacts
+operator|=
+name|md
+operator|.
+name|getArtifacts
+argument_list|(
+literal|"test"
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|artifacts
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|artifacts
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|artifacts
+operator|=
+name|md
+operator|.
+name|getArtifacts
+argument_list|(
+literal|"other"
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|artifacts
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|artifacts
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testDefaultConfMapping
 parameter_list|()
 throws|throws
